Updated CSS to look modern and easy on eye plus other minor improvements
1. Changed font.
2. Changed color & bkg color.
3. Increased width of the right col and made text in the middle section take 100% of the space

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -17,6 +17,8 @@
           url: "docs/managingflags/projects-and-environments"
         - title: Projects & Environments
           url: "docs/managingflags/projects-and-environments"
+        - title: Access Control
+          url: "docs/managingflags/access-control"
         - title: Live Tail
           url: "docs/managingflags/livetail"
     - title: "SDKs"
