--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -14,6 +14,8 @@
           url: "docs/features/flagvariations"
         - title: Attributes
           url: "docs/features/attributes"
+ 	- title: Attributes & Associated Operators
+          url: "docs/features/attributes-operators"
         - title: Targeting Rules
           url: "docs/features/targetingrules"
         - title: Live Tail
