--- a/_config.yml
+++ b/_config.yml
@@ -15,15 +15,15 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Unlaunch - Documentation
-email: unlaunch@gmail.com
+email: help@unlaunch.io
 author: Umer Mansoor
 description: > # this means to ignore newlines until "baseurl:"
   Unlaunch Help Center - Unlaunch guides, API reference, SDK documentation
   and more.
 
 
-baseurl: "/" # for gh-pages
-#baseurl: "" # for local
+# baseurl: "/" # for gh-pages
+baseurl: "" # for local
 
 # This is mostly for testing
 url: "https://docs.unlaunch.io/" # the base hostname & protocol for your site
