--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -14,29 +14,24 @@
     - title: "Feature Flags"
       url: "docs/features"
       children:
-        - title: Creating flag variation
+        - title: Flag variations
           url: "docs/features/flagvariations"
-        - title: Enabling/Disabling flag
+        - title: Enabling/Disabling flags
           url: "docs/features/enable-disable-flags"
-        - title: Default rule
-          url: "docs/features/default-rule"
         - title: Targeting rules
           url: "docs/features/targetingrules"
-        - title: Copy rules and configuration
-          url: "docs/features/copy-rules"
-        - title: Defining configuration for variation
+        - title: Dynamic configuration
           url: "docs/features/variation-configuration"
-        - title: Analyze impact using Insights graph
+        - title: Insights graph
           url: "docs/features/insights-graph"
         - title: Archive/Delete flags 
           url: "docs/features/archive-delete-flags"
-        - title: Flag settings
-          url: "docs/features/flag-settings"
         - title: Debugger
           url: "docs/features/debugger"
         - title: Activity 
           url: "docs/features/audit-log"
-    
+        - title: Copy rules and configuration
+          url: "docs/features/copy-rules"
     - title: "Attributes"
       url: "docs/attributes"
       children:
