--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -16,20 +16,20 @@
       children:
         - title: Flag variations
           url: "docs/features/flagvariations"
-        - title: Enabling/Disabling flags
-          url: "docs/features/enable-disable-flags"
         - title: Targeting rules
           url: "docs/features/targetingrules"
         - title: Dynamic configuration
           url: "docs/features/variation-configuration"
         - title: Insights graph
           url: "docs/features/insights-graph"
-        - title: Archive/Delete flags 
-          url: "docs/features/archive-delete-flags"
         - title: Debugger
           url: "docs/features/debugger"
         - title: Activity 
           url: "docs/features/audit-log"
+        - title: Enable & disable flags
+          url: "docs/features/enable-disable-flags"
+        - title: Archive & delete flags 
+          url: "docs/features/archive-delete-flags"
         - title: Copy rules and configuration
           url: "docs/features/copy-rules"
     - title: "Attributes"
