--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -31,16 +31,12 @@
         - title: Archive & delete flags 
           url: "docs/features/archive-delete-flags"
     - title: "Attributes"
-      url: "docs/attributes"
-      children:
-        - title: Defining attributes based on types
-          url: "docs/attributes/attributes"
-        - title: Operators based on attribute type
+      url: "docs/attributes"  
+        - title: Attribute types & operators
           url: "docs/attributes/attributes-operators"
-        - title: Defining attributes in rules
+        - title: Using attributes
           url: "docs/attributes/attributes-rules"
-            
-    - title: "Projects and Environment"
+    - title: "Projects & Environments"
       url: "docs/projects"
       children:
         - title: Creating projects and environments
