--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -3,7 +3,6 @@
   links:
     - title: "Getting Started"
       url: "docs/getting-started"
-   
     - title: "Unlaunch SDKs"
       url: "docs/sdks"
       children:
@@ -31,7 +30,8 @@
         - title: Archive & delete flags 
           url: "docs/features/archive-delete-flags"
     - title: "Attributes"
-      url: "docs/attributes"  
+      url: "docs/attributes"
+      children:
         - title: Attribute types & operators
           url: "docs/attributes/attributes-operators"
         - title: Using attributes
