--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -29,6 +29,7 @@
           url: "docs/features/enable-disable-flags"
         - title: Archive & delete flags 
           url: "docs/features/archive-delete-flags"
+
     - title: "Attributes"
       url: "docs/attributes"
       children:
@@ -36,17 +37,18 @@
           url: "docs/attributes/attributes-operators"
         - title: Using attributes
           url: "docs/attributes/attributes-rules"
+
     - title: "Projects & Environments"
       url: "docs/projects"
       children:
-        - title: Creating projects and environments
-          url: "docs/projects/projects-and-environments"
-        - title: API keys in project
+        - title: SDK Keys
           url: "docs/projects/sdk-keys"
-        - title: Teams attached to project
-          url: "docs/projects/team"
-        - title: Understanding member role
-          url: "docs/projects/access-control"
+
+    - title: "Teams"
+      url: "docs/users"
+      children:
+        - title: Access control
+          url: "docs/users/access-control"    
       
     - title: "Integrations"
       url: "docs/integrations"
